--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "",
   "main": "webpack.config.js",
   "dependencies": {
-    "axios": "^0.12.0",
     "babel-core": "^6.18.2",
     "babel-loader": "^6.2.0",
     "babel-plugin-add-module-exports": "^0.1.2",
@@ -14,18 +13,19 @@
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-0": "^6.3.13",
+    "webpack": "^1.12.9",
+    "webpack-dev-server": "^1.14.1"
+  },
+  "devDependencies": {
+    "axios": "^0.12.0",
     "react": "^0.14.6",
     "react-dom": "^0.14.6",
     "react-redux": "^4.4.5",
     "redux": "^3.6.0",
-    "redux-logger": "^2.6.1",
-    "redux-promise-middleware": "^3.2.0",
-    "redux-thunk": "^2.1.0",
-    "webpack": "^1.12.9",
-    "webpack-dev-server": "^1.14.1"
+    "redux-thunk": "^2.1.0"
   },
-  "devDependencies": {},
   "scripts": {
+    "start": "npm run dev",
     "dev": "./node_modules/.bin/webpack-dev-server --content-base src --inline --hot",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
