--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "webpack.config.js",
   "dependencies": {
     "axios": "^0.12.0",
+    "csjs": "^1.1.0",
     "react": "^0.14.6",
+    "react-csjs": "^2.1.0",
     "react-dom": "^0.14.6",
     "react-redux": "^4.4.5",
     "redux": "^3.6.0",
